# Distribute-Grep

./: CMakeLists.txt  README.md  build.sh
include/client/: query_client.hh  query_client_session.hh  result.hh
include/server/: grep_server.hh  grep_server_session.hh
include/session/: session.hh
scripts/: deploy.sh  install_package.sh  start_server.sh  stop_server.sh
src/client/: query_client.cc  query_client_main.cc  query_client_session.cc
src/server/: grep_server.cc  grep_server_main.cc  grep_server_session.cc
src/session/: session.cc
test/: mp1_test.cc
